Fixed relationships between and Food, Step, and Recipe. Tested that the Recipe and Food RESTControllers work