@@ -1,7 +1,10 @@
 package com.lawal.banji.springkitchen.recipe.model;
 
-import com.lawal.banji.springkitchen.food.Food;
+import com.lawal.banji.springkitchen.food.model.Food;
 import com.lawal.banji.springkitchen.meal.Meal;
+import com.lawal.banji.springkitchen.recipe.model.exception.RecipeDescriptionNullException;
+import com.lawal.banji.springkitchen.recipe.model.exception.RecipeTitleNullException;
+import com.lawal.banji.springkitchen.step.model.Step;
 import jakarta.persistence.*;
 
 import java.time.LocalDateTime;
@@ -15,33 +18,16 @@ import org.slf4j.LoggerFactory;
 @Table(name = "recipes")
 public class Recipe {
 
-    /* String constants */
-    public static final String RECIPE_UPDATE_SOURCE_CANNOT_BE_NULL = "Recipe update Source cannot be null";
-    public static final String INVALID_UPDATE_SOURCE_ID = "Recipe update source id is not ivalid. Update failed";
-
-    public static final String RECIPE_TITLE_CANNOT_BE_NULL = "Recipe title cannot be null or blank";
-    public static final String RECIPE_DESCRIPTION_CANNOT_BE_NULL = "Recipe description cannot be null or blank";
-
-    private static final String METHOD_DOES_NOT_ACCEPT_NULL_ID_PARAMETERS = "Recipe method does not allow null id parameters";
-    public static final String NULL_STEPS_COLLECTION_NOT_ALLOWED = "Recipe method doe not allow null step collections";
-    public static final String NULL_MEALS_COLLECTION_NOT_ALLOWED = "Recipe method does not allow null meal collections";
-
-    public static final String NULL_STEP_CANNOT_BE_PASSED_TO_RECIPE_METHOD = "Recipe method does not allow a null step";
-    public static final String NULL_MEAL_CANNOT_BE_PASSED_TO_RECIPE_METHOD = "Recipe method does not allow a null  meal";
-
-    /* logger */
-    private static final Logger logger = LoggerFactory.getLogger(Recipe.class);
-
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
     private Long id;
 
     @Column(nullable = false)
-    @NotBlank(message = RECIPE_TITLE_CANNOT_BE_NULL)
+    @NotBlank(message = RecipeTitleNullException.MESSAGE)
     private String title;
 
     @Column(nullable = false)
-    @NotBlank(message = RECIPE_DESCRIPTION_CANNOT_BE_NULL)
+    @NotBlank(message = RecipeDescriptionNullException.MESSAGE)
     private String description;
 
     /* Bidirectional fields */
@@ -129,86 +115,76 @@ public class Recipe {
     public void setId(Long id) { this.id = id; }
 
     public void setTitle(String title) {
-        if (title == null || title.trim().isBlank()) loggingExceptionHandler(RECIPE_TITLE_CANNOT_BE_NULL);
-        else { this.title = title.trim(); }
+        RecipeValidator.validateRecipeMethodStringParameter(title);
+//        if (title == null || title.trim().isBlank()) loggingExceptionHandler(RECIPE_TITLE_CANNOT_BE_NULL);
+        this.title = title.trim();
     }
 
     public void setDescription(String description) {
-        if (description == null || description.trim().isBlank()) loggingExceptionHandler(RECIPE_DESCRIPTION_CANNOT_BE_NULL);
-        else { this.description = description.trim(); }
+        RecipeValidator.validateRecipeMethodStringParameter(description);
+//        if (description == null || description.trim().isBlank()) loggingExceptionHandler(RECIPE_DESCRIPTION_CANNOT_BE_NULL);
+        this.description = description.trim();
     }
 
     // Step mutator methods
     public void setSteps(Set<Step> steps) {
-        if (steps == null) loggingExceptionHandler(NULL_STEPS_COLLECTION_NOT_ALLOWED);
-        else {
-            if (this.steps == null) this.steps = new HashSet<>();
-            this.steps.clear();
-            for (Step step : new HashSet<>(steps)) {
-                addStep(step);
-            }
+        RecipeValidator.validateRecipeMethodStepSetParameter(steps);
+        if (this.steps == null) this.steps = new HashSet<>();
+        this.steps.clear();
+        for (Step step : new HashSet<>(steps)) {
+            addStep(step);
         }
     }
 
     public void addStep(Step step) {
-        if (step == null) loggingExceptionHandler(NULL_STEPS_COLLECTION_NOT_ALLOWED);
-        else {
-            if (this.steps == null) this.steps = new HashSet<>();
-            if (!steps.contains(step)) {
-                steps.add(step);
-                step.setRecipe(this);
-            }
+        RecipeValidator.validateRecipeMethodStepParameter(step);
+        if (this.steps == null) this.steps = new HashSet<>();
+        if (!steps.contains(step)) {
+            steps.add(step);
+            step.setRecipe(this);
         }
     }
 
     public void removeStep(Step step) {
-        if (step == null) loggingExceptionHandler(NULL_STEP_CANNOT_BE_PASSED_TO_RECIPE_METHOD);
-        else {
-            if (this.steps == null) this.steps = new HashSet<>();
-            if (steps.contains(step)) {
-                this.steps.remove(step);
-                if (step.getRecipe() == this) step.setRecipe(null);
-            }
+        RecipeValidator.validateRecipeMethodStepParameter(step);
+        if (this.steps == null) this.steps = new HashSet<>();
+        if (steps.contains(step)) {
+            this.steps.remove(step);
+            if (step.getRecipe() == this) step.setRecipe(null);
         }
     }
 
     // Meal mutator methods
     public void setMeals (Set<Meal> meals) {
-        if (meals == null) loggingExceptionHandler(NULL_MEALS_COLLECTION_NOT_ALLOWED);
-        else {
-            if (this.meals == null) this.meals = new HashSet<>();
-            for (Meal meal : new HashSet<>(meals)) {
-                addMeal(meal);
-            }
+        RecipeValidator.validateRecipeMethodMealSetParameter(meals);
+        if (this.meals == null) this.meals = new HashSet<>();
+        for (Meal meal : new HashSet<>(meals)) {
+            addMeal(meal);
         }
     }
 
     public void addMeal (Meal meal) {
-        if (meal == null) loggingExceptionHandler(NULL_MEAL_CANNOT_BE_PASSED_TO_RECIPE_METHOD);
-        else {
-            if (this.meals == null) this.meals = new HashSet<>();
-            if (!meals.contains(meal)) {
-                meals.add(meal);
-                meal.setRecipe(this);
-            }
+        RecipeValidator.validateRecipeMethodMealParameter(meal);
+        if (this.meals == null) this.meals = new HashSet<>();
+        if (!meals.contains(meal)) {
+            meals.add(meal);
+            meal.setRecipe(this);
         }
     }
 
     public void removeMeal (Meal meal) {
-        if (meal == null) loggingExceptionHandler(NULL_MEAL_CANNOT_BE_PASSED_TO_RECIPE_METHOD);
-        else {
-            if (this.meals == null) this.meals = new HashSet<>();
-            if (meals.contains(meal)) {
-                this.meals.remove(meal);
-                meal.setRecipe(null);
-            }
+        RecipeValidator.validateRecipeMethodMealParameter(meal);
+        if (this.meals == null) this.meals = new HashSet<>();
+        if (meals.contains(meal)) {
+            this.meals.remove(meal);
+            meal.setRecipe(null);
         }
     }
 
     /* Search methods */
     // find a unique step
     public Step findStepById(Long id) {
-        if (id == null) loggingExceptionHandler(METHOD_DOES_NOT_ACCEPT_NULL_ID_PARAMETERS);
+        RecipeValidator.validateRecipeMethodLongParameter(id);
         if (steps == null) steps = new HashSet<>();
         for (Step step : steps) {
             if (step.getId().equals(id)) return step;
@@ -220,30 +196,30 @@ public class Recipe {
     public Set<Step> filterStepsByDirections(String string) {
         Set<Step> matches = new HashSet<>();
         if (steps == null) steps = new HashSet<>();
-        if (string != null && string.trim().isEmpty()) {
+        if (string != null && !string.isBlank()) {
+            string = string.toLowerCase();
             for (Step step : steps) {
-                if (step.getDirections().toLowerCase().contains(string.toLowerCase())
-                        | step.getIngredient().getName().toLowerCase().contains(string)) matches.add(step);
+                if (step.getDirections().toLowerCase().contains(string)
+                    || step.getIngredient().getName().toLowerCase().contains(string)
+                ) matches.add(step);
             }
         }
-
         return matches;
     }
 
     public Set<Step> filterStepsByIngredient(Food food) {
+        RecipeValidator.validateRecipeMethodFoodParameter(food);
         Set<Step> matches = new HashSet<>();
         if (steps == null) steps = new HashSet<>();
-        if (food != null) {
-            for (Step step : new HashSet<>(steps)) {
-                if (step.getIngredient().equals(food)) matches.add(step);
-            }
+        for (Step step : new HashSet<>(steps)) {
+            if (step.getIngredient().equals(food)) matches.add(step);
         }
         return matches;
     }
 
     // Find a unique meal
     public Meal findMealById(Long id) {
-        if (id == null) loggingExceptionHandler(METHOD_DOES_NOT_ACCEPT_NULL_ID_PARAMETERS);
+        RecipeValidator.validateRecipeMethodLongParameter(id);
         if (meals == null) meals = new HashSet<>();
         for (Meal meal : new HashSet<>(meals)) {
             if (meal.getId().equals(id)) return meal;
@@ -253,12 +229,11 @@ public class Recipe {
 
     // Meal filtration methods
     public Set<Meal> filterMealsByDateRange(LocalDateTime startDate, LocalDateTime endDate) {
+        RecipeValidator.validateFilterMealsByDateRangeParameter(startDate, endDate);
         HashSet<Meal> matches = new HashSet<>();
-        if (startDate != null && endDate != null) {
-            if (meals == null) meals = new HashSet<>();
-            for (Meal meal : new HashSet<>(meals)) {
-                if (meal.isInDateRange(startDate, endDate)) matches.add(meal);
-            }
+        if (meals == null) meals = new HashSet<>();
+        for (Meal meal : new HashSet<>(meals)) {
+            if (meal.isInDateRange(startDate, endDate)) matches.add(meal);
         }
         return matches;
     }
@@ -276,19 +251,12 @@ public class Recipe {
     /* Update methods */
     public void getUpdate(Recipe source) {
         if (source == this) return;
-
-        if (source == null) loggingExceptionHandler(RECIPE_UPDATE_SOURCE_CANNOT_BE_NULL);
-        else if (source.getSteps() == null) loggingExceptionHandler(NULL_STEPS_COLLECTION_NOT_ALLOWED);
-        else if (source.getMeals() == null) loggingExceptionHandler(NULL_MEALS_COLLECTION_NOT_ALLOWED);
-        else if (source.getId() == null || !id.equals(source.getId())) loggingExceptionHandler(INVALID_UPDATE_SOURCE_ID);
-        else if (source.getTitle() == null || source.getTitle().trim().isBlank()) loggingExceptionHandler(RECIPE_TITLE_CANNOT_BE_NULL);
-        else if (source.getDescription() == null || source.getDescription().trim().isBlank()) loggingExceptionHandler(RECIPE_DESCRIPTION_CANNOT_BE_NULL);
-        else {
+        RecipeValidator.validateRecipeUpdateSource(source);
+//        RecipeValidator.validateIdMatch(this, source);
             setTitle(source.getTitle());
             setDescription(source.getDescription());
             setSteps(source.getStepsAsSet());
             setMeals(source.getMealsAsSet());
-        }
     }
 
     /* Equals and hash methods */
@@ -346,11 +314,5 @@ public class Recipe {
             }
         }
         return stringBuilder.toString();
-    }
-
-    /* logging methods */
-    public void loggingExceptionHandler (String errorMessage) {
-        logger.error(errorMessage);
-        throw new IllegalArgumentException(errorMessage);
     }
 }
